# zerolan-core

./: .gitignore  README.md  config.template.yaml  requirements.txt  starter.py
asr/: app.py
asr/kotoba_whisper_2/: pyproject.toml
asr/paraformer/: Dockerfile  model.py  pyproject.toml  requirements.txt
common/: abs_app.py  decorator.py
database/: milvus.py
database/milvus/: config.py  milvus.py  pyproject.toml  requirements.txt
defense/: app.py
defense/deberta/: config.py  model.py
docker/: blip-dockerfile-cn
img_cap/: app.py
img_cap/blip/: Dockerfile  config.py  model.py  pyproject.toml  requirements.txt
llm/: app.py
llm/chatglm3/: model.py  pyproject.toml  requirements.txt
llm/deepseek/: config.py  model.py  pyproject.toml
llm/glm4/: config.py  model.py  pyproject.toml  quantited_model.py  requirements.txt
llm/ollama/: model.py
llm/qwen/: model.py  pyproject.toml  requirements.txt
llm/shisa/: model.py  pyproject.toml
llm/yi/: model.py  pyproject.toml
ocr/: app.py
ocr/paddle/: model.py  pyproject.toml  requirements.txt
tests/: test_glm4.py
tts/: app.py
tts/gpt_sovits/: model.py
utils/: file_util.py  web_util.py
vid_cap/: app.py
vid_cap/hitea/: model.py
vla/showui/: app.py  model.py
